<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SEA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="current_balance">Current Balance</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="register">Register</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="go">GO</string>
    <string name="date">Date</string>
    <string name="Type">Transaction Type</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

</resources>