<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/TransDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="sendFeedback"
        android:text="@string/date" >
    </Button>

    <Spinner
        android:id="@+id/SpinnerCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:prompt="@string/category" >
    </Spinner>

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:inputType="textLongMessage" >
    </EditText>

    <Spinner
        android:id="@+id/SpinnerTransactionType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/transactionTypelist"
        android:prompt="@string/Type" >
    </Spinner>

    <EditText
        android:id="@+id/textAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/transAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/transCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>