<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/fromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_date" />

        <Button
            android:id="@+id/toDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/to_date" />

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/go" />
    </TableRow>

    <GridView
        android:id="@+id/gridHeader"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="3dp"
        android:numColumns="5"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp" />
    
    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="3dp"
        android:numColumns="5"
        android:smoothScrollbar="true"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp" />

</TableLayout>